Specific version to conserve Manifest file content over manipulations.
Applied patch in constant-output.patch.
Now using a patched version of iPOJO Core.

--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/README
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.dependencies/README
@@ -2,8 +2,7 @@ This project must contain the iPOJO Core and the patched version of the iPOJO
 Manipulator. It has been created in order to have an Equinox 'plugin' version
 of the iPOJO Core and Manipulator JAR files.
 
-Place the org and xsd folder from the JAR files in the root folder of this
-project (or modify the build.properties file) to be able to build it.
-
-Use the patch.manipulator file to generate the patched version of the
-Manipulator from the Manipulator project in the Felix trunk. 
+The constant-output.patch contains the patch to be applied on ipojo project
+group root in order to have a stable Manifest.mf file content.
+It uses TreeMap and LinkedHashMap instead of HashMap to conserve the Elements
+and Elements' attributes order over manipulations.
